Fix ci.yml parsing error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,7 @@ jobs:
 
       # HTML validation
       - name: Validate HTML
-        with:
-          directory: .
-          extension: html
+        run: npx htmlhint "**/*.html"
 
       # Configurating Node.js
       - name: Setup Node.js
