--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install & Run ESLint
         run: |
           npm init -y
-          npm install eslint --save-dev
+          npm install eslint@8 --save-dev
           echo '{"extends": "eslint:recommended", "env": {"browser": true, "es6": true}, "parserOptions": {"ecmaVersion": 2020}}' > .eslintrc.json
           npx eslint "**/*.js"
 
