Trying fix error with CI/CD (3)
Lighthouse problem solving

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Audit with Lighthouse
         uses: treosh/lighthouse-ci-action@v10
         with:
-          urls: 'index.html'
+          staticDistDir: .
           uploadArtifacts: true
           temporaryPublicStorage: true
           runs: 1
